# dist-word-similarity

./: Dockerfile  README.md  main.py  pyproject.toml  tester.py
methods/: __init__.py  bpemb_method.py  gensim_glove_method.py  jellyfish_method.py  rapidfuzz_method.py  set_method.py  wordnet_method.py
