[project]
name = "dist-word-similarity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bpemb>=0.3.6",
    "gensim>=4.4.0",
    "jellyfish>=1.2.1",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "psutil>=7.2.2",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
]
